--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-elements": "^1.0.0",
     "react-native-firebase": "^5.2.2",
     "react-native-geocoding": "^0.3.0",
+    "react-native-gesture-handler": "^1.0.15",
     "react-native-render-html": "^3.10.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^1.5.11"
